--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -128,7 +128,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 LastLevel=/Engine/Maps/Templates/Template_Default
 
 [ModuleFileTracking]
-Building_Escape.TimeStamp=2021.05.17-17.40.14
+Building_Escape.TimeStamp=2021.05.17-17.50.36
 Building_Escape.LastCompileMethod=Runtime
 PakFile.TimeStamp=2021.04.03-18.31.01
 PakFile.LastCompileMethod=Unknown
@@ -1368,6 +1368,12 @@ BP_Sky_Sphere_C.Replication=True
 BP_Sky_Sphere_C.Collision=True
 BP_Sky_Sphere_C.Input=True
 BP_Sky_Sphere_C.Actor=True
+PlayerStart.TransformCommon=True
+PlayerStart.Object=True
+PlayerStart.Rendering=True
+PlayerStart.Replication=True
+PlayerStart.Input=True
+PlayerStart.Actor=True
 
 [DetailMultiObjectNodeExpansion]
 EditorStyleSettings=True
