enclosed level into one giant room

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -128,7 +128,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 LastLevel=/Game/Levels/Building_Escape
 
 [ModuleFileTracking]
-Building_Escape.TimeStamp=2021.05.18-16.03.43
+Building_Escape.TimeStamp=2021.05.18-17.04.18
 Building_Escape.LastCompileMethod=Runtime
 PakFile.TimeStamp=2021.04.03-18.31.01
 PakFile.LastCompileMethod=Unknown
@@ -955,8 +955,6 @@ ExternalImagePicker.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/Models/Broken_Concrete.Broken_Concrete
-OpenAssetsAtExit=/Game/Models/Wood.Wood
 
 [DetailCategories]
 EditorStyleSettings.UserInterface=True
@@ -1410,6 +1408,28 @@ MaterialExpressionVectorParameter.ParameterCustomization=True
 MaterialExpressionTextureSample.MaterialExpressionTextureSample=True
 MaterialExpressionTextureSample.MaterialExpressionTextureBase=True
 MaterialExpressionTextureSample.MaterialExpression=True
+Brush.TransformCommon=True
+Brush.BrushSettings=True
+Brush.Replication=True
+Brush.Actor=True
+Texture2D.Compression=True
+Texture2D.Texture=True
+Texture2D.File Path=True
+Texture2D.Adjustments=True
+Texture2D.LevelOfDetail=True
+Texture2D.Compositing=True
+Brush.Surface Materials=True
+Brush.Geometry=True
+Brush.Surface Properties=True
+LightmassPrimitiveSettingsObject.Lightmass=True
+Actor.TransformCommon=True
+Actor.Surface Materials=True
+Actor.Rendering=True
+Actor.Geometry=True
+Actor.Replication=True
+Actor.Surface Properties=True
+Actor.Collision=True
+Actor.Actor=True
 
 [DetailMultiObjectNodeExpansion]
 EditorStyleSettings=True
@@ -1467,6 +1487,7 @@ EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Obj
 Object=
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
+Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -1474,8 +1495,10 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [PlacementMode]
-RecentlyPlaced=/Game/Models/2x1_Door_and_Frame_Door.2x1_Door_and_Frame_Door;
-RecentlyPlaced=/Game/Models/2x1_Door_and_Frame_Frame.2x1_Door_and_Frame_Frame;
+RecentlyPlaced=/Game/Models/StoneWall.StoneWall;
+RecentlyPlaced=/Game/Models/Brick.Brick;
+RecentlyPlaced=/Game/Models/Door.Door;
+RecentlyPlaced=/Game/Models/DoorFrame.DoorFrame;
 RecentlyPlaced=/Game/Models/Broken_Concrete.Broken_Concrete;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Engine/BasicShapes/Sphere.Sphere;/Engine/Transient.ActorFactoryBasicShape_0
@@ -1616,9 +1639,10 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Models/Wood
-MRUItem1=/Game/Models/Broken_Concrete
-MRUItem2=/Game/Levels/Building_Escape
+MRUItem0=/Game/Models/StoneWall
+MRUItem1=/Game/Models/Wood
+MRUItem2=/Game/Models/Broken_Concrete
+MRUItem3=/Game/Levels/Building_Escape
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 bSCCUseGlobalSettings=False
@@ -1641,6 +1665,7 @@ bUseUnsortedMenus=False
 
 [AssetEditorToolkitTabLocation]
 /Game/Models/Broken_Concrete.Broken_Concrete=1
+/Game/Models/StoneWall.StoneWall=1
 
 [MaterialEditor]
 PrimType=1
