room boxed in and door placed in corner of room

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -22,6 +22,7 @@ PreviewPlatformName=None
 PreviewShaderFormatName=None
 bPreviewFeatureLevelActive=False
 PreviewDeviceProfileName=None
+bAllowSelectTranslucent=False
 
 [/Script/UnrealEd.LevelEditorPlaySettings]
 LaptopScreenResolutions=(Description="Apple MacBook Air 11",Width=1366,Height=768,AspectRatio="16:9",bCanSwapAspectRatio=True,ProfileName="")
@@ -128,8 +129,8 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 LastLevel=/Game/Levels/Building_Escape
 
 [ModuleFileTracking]
-Building_Escape.TimeStamp=2021.05.18-17.04.18
-Building_Escape.LastCompileMethod=Runtime
+Building_Escape.TimeStamp=2021.05.18-17.28.40
+Building_Escape.LastCompileMethod=External
 PakFile.TimeStamp=2021.04.03-18.31.01
 PakFile.LastCompileMethod=Unknown
 RSA.TimeStamp=2021.04.03-18.31.02
@@ -1420,7 +1421,7 @@ Texture2D.LevelOfDetail=True
 Texture2D.Compositing=True
 Brush.Surface Materials=True
 Brush.Geometry=True
-Brush.Surface Properties=True
+Brush.Surface Properties=False
 LightmassPrimitiveSettingsObject.Lightmass=True
 Actor.TransformCommon=True
 Actor.Surface Materials=True
@@ -1430,6 +1431,19 @@ Actor.Replication=True
 Actor.Surface Properties=True
 Actor.Collision=True
 Actor.Actor=True
+Generic.Surface Materials=True
+Generic.Geometry=True
+Generic.Surface Properties=True
+AtmosphericFog.TransformCommon=True
+AtmosphericFog.Atmosphere=True
+AtmosphericFog.Sun=True
+AtmosphericFog.Ground=True
+AtmosphericFog.Rendering=True
+AtmosphericFog.Tags=True
+AtmosphericFog.Activation=True
+AtmosphericFog.Cooking=True
+AtmosphericFog.Replication=True
+AtmosphericFog.Actor=True
 
 [DetailMultiObjectNodeExpansion]
 EditorStyleSettings=True
