lighting and textures set

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1496,7 +1496,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [ContentBrowser]
-ContentBrowserTab1.SourcesExpanded=False
+ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
 ContentBrowserTab1.VerticalSplitter.SlotSize1=0.750000
@@ -1507,7 +1507,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Classes_Game/Building_Escape
+ContentBrowserTab1.SelectedPaths=/Game/Models
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -1555,7 +1555,7 @@ InstalledPlugins=RigLogic
 InstalledPlugins=XRVisualization
 
 [Directories2]
-UNR=W:/UdemyCourses/Unreal Engine C++/BuildingEscape/Building_Escape/Content
+UNR=W:/UdemyCourses/Unreal Engine C++/BuildingEscape/Building_Escape/Content/Levels
 BRUSH=W:/UdemyCourses/Unreal Engine C++/BuildingEscape/Building_Escape/Content/
 FBX=W:/UdemyCourses/Unreal Engine C++/BuildingEscape/Building_Escape/Content/
 FBXAnim=W:/UdemyCourses/Unreal Engine C++/BuildingEscape/Building_Escape/Content/
