added texture sampling to floor texture

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -957,6 +957,7 @@ ExternalImagePicker.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/Models/MetalFloor_Mat.MetalFloor_Mat
 
 [DetailCategories]
 EditorStyleSettings.UserInterface=True
@@ -1469,6 +1470,14 @@ SpotLight.RayTracing=True
 SpotLight.Tags=True
 SpotLight.Cooking=True
 SpotLight.Actor=True
+MaterialExpressionTextureCoordinate.MaterialExpressionTextureCoordinate=True
+MaterialExpressionTextureCoordinate.MaterialExpression=True
+MaterialExpressionScalarParameter.General=True
+MaterialExpressionScalarParameter.MaterialExpressionScalarParameter=True
+MaterialExpressionScalarParameter.MaterialExpression=True
+MaterialExpressionScalarParameter.CustomPrimitiveData=True
+MaterialExpressionMultiply.MaterialExpressionMultiply=True
+MaterialExpressionMultiply.MaterialExpression=True
 
 [DetailMultiObjectNodeExpansion]
 EditorStyleSettings=True
@@ -1683,10 +1692,11 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Models/StoneWall
-MRUItem1=/Game/Models/Wood
-MRUItem2=/Game/Models/Broken_Concrete
-MRUItem3=/Game/Levels/Building_Escape
+MRUItem0=/Game/Models/MetalFloor_Mat
+MRUItem1=/Game/Models/StoneWall
+MRUItem2=/Game/Models/Wood
+MRUItem3=/Game/Models/Broken_Concrete
+MRUItem4=/Game/Levels/Building_Escape
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 bSCCUseGlobalSettings=False
@@ -1703,13 +1713,13 @@ bPromptBeforeAutoImporting=True
 bDeleteSourceFilesWithAssets=False
 
 [/Script/UnrealEd.MaterialEditorOptions]
-bShowGrid=False
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 
 [AssetEditorToolkitTabLocation]
 /Game/Models/Broken_Concrete.Broken_Concrete=1
 /Game/Models/StoneWall.StoneWall=1
+/Game/Models/MetalFloor_Mat.MetalFloor_Mat=0
 
 [MaterialEditor]
 PrimType=1
