scaled the texture on the floor to be able to easily resize if needed

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1478,6 +1478,20 @@ MaterialExpressionScalarParameter.MaterialExpression=True
 MaterialExpressionScalarParameter.CustomPrimitiveData=True
 MaterialExpressionMultiply.MaterialExpressionMultiply=True
 MaterialExpressionMultiply.MaterialExpression=True
+StaticMeshComponent.TransformCommon=True
+StaticMeshComponent.StaticMesh=True
+StaticMeshComponent.Materials=True
+StaticMeshComponent.Physics=True
+StaticMeshComponent.Collision=True
+StaticMeshComponent.Lighting=True
+StaticMeshComponent.Rendering=True
+StaticMeshComponent.Navigation=True
+StaticMeshComponent.VirtualTexture=True
+StaticMeshComponent.Tags=True
+StaticMeshComponent.Cooking=True
+MaterialEditorInstanceConstant.ParameterGroups=True
+MaterialEditorInstanceConstant.General=True
+MaterialEditorInstanceConstant.Previewing=True
 
 [DetailMultiObjectNodeExpansion]
 EditorStyleSettings=True
@@ -1538,6 +1552,9 @@ AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 SpotLight="\"Object.Light.SpotLightComponent.Object.Light.LightColor\" "
 Light="\"Object.Light.SpotLightComponent.Object.Light.LightColor\" "
+PreviewMaterial="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" "
+Material="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" "
+MaterialInterface=
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -1545,6 +1562,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [PlacementMode]
+RecentlyPlaced=/Game/Models/Floor.Floor;
 RecentlyPlaced=/Game/Models/MetalFloor.MetalFloor;
 RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
@@ -1693,10 +1711,14 @@ bConvertSceneUnit=False
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Models/MetalFloor_Mat
-MRUItem1=/Game/Models/StoneWall
-MRUItem2=/Game/Models/Wood
-MRUItem3=/Game/Models/Broken_Concrete
-MRUItem4=/Game/Levels/Building_Escape
+MRUItem1=/Game/Models/Floor
+MRUItem2=/Engine/Tutorial/SubEditors/TutorialAssets/TutorialMaterial
+MRUItem3=/Game/Models/MetalFloor
+MRUItem4=/Game/Models/Wall
+MRUItem5=/Game/Models/StoneWall
+MRUItem6=/Game/Models/Wood
+MRUItem7=/Game/Models/Broken_Concrete
+MRUItem8=/Game/Levels/Building_Escape
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 bSCCUseGlobalSettings=False
@@ -1715,11 +1737,15 @@ bDeleteSourceFilesWithAssets=False
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
+bShowGrid=False
 
 [AssetEditorToolkitTabLocation]
 /Game/Models/Broken_Concrete.Broken_Concrete=1
 /Game/Models/StoneWall.StoneWall=1
 /Game/Models/MetalFloor_Mat.MetalFloor_Mat=0
+/Game/Models/MetalFloor.MetalFloor=1
+/Game/Models/Wall.Wall=1
+/Game/Models/Floor.Floor=1
 
 [MaterialEditor]
 PrimType=1
@@ -1778,4 +1804,16 @@ bMaterialQualityUsed[0]=0
 bMaterialQualityUsed[1]=1
 bMaterialQualityUsed[2]=0
 bMaterialQualityUsed[3]=0
+
+[DetailCategoriesAdvanced]
+StaticMeshActor.StaticMesh=False
+PreviewMaterial.Translucency=True
+
+[DetailCustomWidgetExpansion]
+MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,
+
+[MaterialInstanceEditor]
+bShowGrid=True
+bDrawGrid=False
+PrimType=1
 
