made floor with u and v scale to be able to perfectly square out floor textures

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -958,6 +958,7 @@ ExternalImagePicker.LastCompileMethod=Unknown
 [AssetEditorSubsystem]
 CleanShutdown=False
 OpenAssetsAtExit=/Game/Models/MetalFloor_Mat.MetalFloor_Mat
+OpenAssetsAtExit=/Game/Models/Floor.Floor
 
 [DetailCategories]
 EditorStyleSettings.UserInterface=True
@@ -1492,6 +1493,7 @@ StaticMeshComponent.Cooking=True
 MaterialEditorInstanceConstant.ParameterGroups=True
 MaterialEditorInstanceConstant.General=True
 MaterialEditorInstanceConstant.Previewing=True
+MaterialExpressionAppendVector.MaterialExpression=True
 
 [DetailMultiObjectNodeExpansion]
 EditorStyleSettings=True
@@ -1710,8 +1712,8 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Models/MetalFloor_Mat
-MRUItem1=/Game/Models/Floor
+MRUItem0=/Game/Models/Floor
+MRUItem1=/Game/Models/MetalFloor_Mat
 MRUItem2=/Engine/Tutorial/SubEditors/TutorialAssets/TutorialMaterial
 MRUItem3=/Game/Models/MetalFloor
 MRUItem4=/Game/Models/Wall
@@ -1811,6 +1813,7 @@ PreviewMaterial.Translucency=True
 
 [DetailCustomWidgetExpansion]
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,
+MaterialInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,
 
 [MaterialInstanceEditor]
 bShowGrid=True
