texture on roof re-scaled as well

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -957,8 +957,6 @@ ExternalImagePicker.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/Models/MetalFloor_Mat.MetalFloor_Mat
-OpenAssetsAtExit=/Game/Models/Floor.Floor
 
 [DetailCategories]
 EditorStyleSettings.UserInterface=True
@@ -1548,7 +1546,7 @@ AssetPropertyPicker.CurrentViewType=0
 
 [DetailPropertyExpansion]
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
-Object=
+Object="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" "
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1556,7 +1554,7 @@ SpotLight="\"Object.Light.SpotLightComponent.Object.Light.LightColor\" "
 Light="\"Object.Light.SpotLightComponent.Object.Light.LightColor\" "
 PreviewMaterial="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" "
 Material="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" "
-MaterialInterface=
+MaterialInterface="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" "
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -1564,6 +1562,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [PlacementMode]
+RecentlyPlaced=/Game/Models/Roof.Roof;
 RecentlyPlaced=/Game/Models/Floor.Floor;
 RecentlyPlaced=/Game/Models/MetalFloor.MetalFloor;
 RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
@@ -1712,15 +1711,16 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Models/Floor
+MRUItem0=/Game/Models/Roof
 MRUItem1=/Game/Models/MetalFloor_Mat
-MRUItem2=/Engine/Tutorial/SubEditors/TutorialAssets/TutorialMaterial
-MRUItem3=/Game/Models/MetalFloor
-MRUItem4=/Game/Models/Wall
-MRUItem5=/Game/Models/StoneWall
-MRUItem6=/Game/Models/Wood
-MRUItem7=/Game/Models/Broken_Concrete
-MRUItem8=/Game/Levels/Building_Escape
+MRUItem2=/Game/Models/Floor
+MRUItem3=/Engine/Tutorial/SubEditors/TutorialAssets/TutorialMaterial
+MRUItem4=/Game/Models/MetalFloor
+MRUItem5=/Game/Models/Wall
+MRUItem6=/Game/Models/StoneWall
+MRUItem7=/Game/Models/Wood
+MRUItem8=/Game/Models/Broken_Concrete
+MRUItem9=/Game/Levels/Building_Escape
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 bSCCUseGlobalSettings=False
@@ -1739,7 +1739,6 @@ bDeleteSourceFilesWithAssets=False
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
-bShowGrid=False
 
 [AssetEditorToolkitTabLocation]
 /Game/Models/Broken_Concrete.Broken_Concrete=1
@@ -1747,7 +1746,8 @@ bShowGrid=False
 /Game/Models/MetalFloor_Mat.MetalFloor_Mat=0
 /Game/Models/MetalFloor.MetalFloor=1
 /Game/Models/Wall.Wall=1
-/Game/Models/Floor.Floor=1
+/Game/Models/Floor.Floor=0
+/Game/Models/Roof.Roof=1
 
 [MaterialEditor]
 PrimType=1
@@ -1813,10 +1813,10 @@ PreviewMaterial.Translucency=True
 
 [DetailCustomWidgetExpansion]
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,
-MaterialInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,
+MaterialInstanceConstant=
 
 [MaterialInstanceEditor]
-bShowGrid=True
+bShowGrid=False
 bDrawGrid=False
 PrimType=1
 
