used the new scaling to make the stone walls look larger

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -130,7 +130,7 @@ CurrentPosGridSize=1
 LastLevel=/Game/Levels/Building_Escape
 
 [ModuleFileTracking]
-Building_Escape.TimeStamp=2021.05.18-19.34.06
+Building_Escape.TimeStamp=2021.05.29-15.58.25
 Building_Escape.LastCompileMethod=Runtime
 PakFile.TimeStamp=2021.04.03-18.31.01
 PakFile.LastCompileMethod=Unknown
@@ -1546,7 +1546,7 @@ AssetPropertyPicker.CurrentViewType=0
 
 [DetailPropertyExpansion]
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
-Object="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" "
+Object=
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1711,13 +1711,13 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Models/Roof
+MRUItem0=/Game/Models/StoneWall
 MRUItem1=/Game/Models/MetalFloor_Mat
-MRUItem2=/Game/Models/Floor
-MRUItem3=/Engine/Tutorial/SubEditors/TutorialAssets/TutorialMaterial
-MRUItem4=/Game/Models/MetalFloor
-MRUItem5=/Game/Models/Wall
-MRUItem6=/Game/Models/StoneWall
+MRUItem2=/Game/Models/Wall
+MRUItem3=/Game/Models/Roof
+MRUItem4=/Game/Models/Floor
+MRUItem5=/Engine/Tutorial/SubEditors/TutorialAssets/TutorialMaterial
+MRUItem6=/Game/Models/MetalFloor
 MRUItem7=/Game/Models/Wood
 MRUItem8=/Game/Models/Broken_Concrete
 MRUItem9=/Game/Levels/Building_Escape
@@ -1739,10 +1739,11 @@ bDeleteSourceFilesWithAssets=False
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
+bShowGrid=False
 
 [AssetEditorToolkitTabLocation]
 /Game/Models/Broken_Concrete.Broken_Concrete=1
-/Game/Models/StoneWall.StoneWall=1
+/Game/Models/StoneWall.StoneWall=0
 /Game/Models/MetalFloor_Mat.MetalFloor_Mat=0
 /Game/Models/MetalFloor.MetalFloor=1
 /Game/Models/Wall.Wall=1
