made door possible to actually walk through

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -130,7 +130,7 @@ CurrentPosGridSize=1
 LastLevel=/Game/Levels/Building_Escape
 
 [ModuleFileTracking]
-Building_Escape.TimeStamp=2021.05.29-16.26.52
+Building_Escape.TimeStamp=2021.06.04-14.55.20
 Building_Escape.LastCompileMethod=Runtime
 PakFile.TimeStamp=2021.04.03-18.31.01
 PakFile.LastCompileMethod=Unknown
@@ -957,6 +957,7 @@ ExternalImagePicker.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/Models/DoorFrame.DoorFrame
 
 [DetailCategories]
 EditorStyleSettings.UserInterface=True
@@ -1509,6 +1510,16 @@ DirectionalLight.LightFunction=True
 DirectionalLight.Tags=True
 DirectionalLight.Cooking=True
 DirectionalLight.Actor=True
+MaterialExpressionComment.MaterialExpressionComment=True
+MaterialExpressionComment.MaterialExpression=True
+StaticMesh.StaticMeshMaterials=True
+StaticMesh.LODCustomMode=True
+StaticMesh.LOD0=True
+StaticMesh.LodSettings=True
+StaticMesh.StaticMesh=True
+StaticMesh.Collision=True
+StaticMesh.ImportSettings=True
+StaticMesh.Navigation=True
 
 [DetailMultiObjectNodeExpansion]
 EditorStyleSettings=True
@@ -1571,7 +1582,7 @@ SpotLight="\"Object.Light.SpotLightComponent.Object.Light.LightColor\" "
 Light=
 PreviewMaterial="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" "
 Material="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" "
-MaterialInterface="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" "
+MaterialInterface=
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -1728,16 +1739,19 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Models/StoneWall
+MRUItem0=/Game/Models/DoorFrame
 MRUItem1=/Game/Models/MetalFloor_Mat
-MRUItem2=/Game/Models/Wall
-MRUItem3=/Game/Models/Roof
-MRUItem4=/Game/Models/Floor
-MRUItem5=/Engine/Tutorial/SubEditors/TutorialAssets/TutorialMaterial
-MRUItem6=/Game/Models/MetalFloor
-MRUItem7=/Game/Models/Wood
-MRUItem8=/Game/Models/Broken_Concrete
-MRUItem9=/Game/Levels/Building_Escape
+MRUItem2=/Game/Models/Broken_Concrete
+MRUItem3=/Game/Models/NewInstance
+MRUItem4=/Game/Models/Brick
+MRUItem5=/Game/Models/Floor
+MRUItem6=/Game/Models/StoneWall
+MRUItem7=/Game/Models/Wall
+MRUItem8=/Game/Models/Roof
+MRUItem9=/Engine/Tutorial/SubEditors/TutorialAssets/TutorialMaterial
+MRUItem10=/Game/Models/MetalFloor
+MRUItem11=/Game/Models/Wood
+MRUItem12=/Game/Levels/Building_Escape
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 bSCCUseGlobalSettings=False
@@ -1756,16 +1770,17 @@ bDeleteSourceFilesWithAssets=False
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
-bShowGrid=False
 
 [AssetEditorToolkitTabLocation]
-/Game/Models/Broken_Concrete.Broken_Concrete=1
+/Game/Models/Broken_Concrete.Broken_Concrete=0
 /Game/Models/StoneWall.StoneWall=0
 /Game/Models/MetalFloor_Mat.MetalFloor_Mat=0
 /Game/Models/MetalFloor.MetalFloor=1
 /Game/Models/Wall.Wall=1
 /Game/Models/Floor.Floor=0
 /Game/Models/Roof.Roof=1
+/Game/Models/Brick.Brick=1
+/Game/Models/NewInstance.NewInstance=0
 
 [MaterialEditor]
 PrimType=1
