added in pressure pad trigger to open door and escape

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1519,6 +1519,14 @@ StaticMesh.StaticMesh=True
 StaticMesh.Collision=True
 StaticMesh.ImportSettings=True
 StaticMesh.Navigation=True
+TriggerVolume.TransformCommon=True
+TriggerVolume.Collision=True
+TriggerVolume.Navigation=True
+TriggerVolume.Tags=True
+TriggerVolume.Cooking=True
+TriggerVolume.Replication=True
+TriggerVolume.BrushSettings=True
+TriggerVolume.Actor=True
 
 [DetailMultiObjectNodeExpansion]
 EditorStyleSettings=True
@@ -1582,6 +1590,8 @@ Light=
 PreviewMaterial="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" "
 Material="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" "
 MaterialInterface=
+TriggerVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -1589,6 +1599,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.TriggerVolume;/Engine/Transient.ActorFactoryBoxVolume_20
 RecentlyPlaced=/Game/Models/Roof.Roof;
 RecentlyPlaced=/Game/Models/Floor.Floor;
 RecentlyPlaced=/Game/Models/MetalFloor.MetalFloor;
