added the trigger volume to the door

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -130,7 +130,7 @@ CurrentPosGridSize=1
 LastLevel=/Game/Levels/Building_Escape
 
 [ModuleFileTracking]
-Building_Escape.TimeStamp=2021.06.04-16.08.39
+Building_Escape.TimeStamp=2021.06.10-15.11.15
 Building_Escape.LastCompileMethod=Runtime
 PakFile.TimeStamp=2021.04.03-18.31.01
 PakFile.LastCompileMethod=Unknown
@@ -1527,6 +1527,7 @@ TriggerVolume.Cooking=True
 TriggerVolume.Replication=True
 TriggerVolume.BrushSettings=True
 TriggerVolume.Actor=True
+OpenDoor.OpenDoor=True
 
 [DetailMultiObjectNodeExpansion]
 EditorStyleSettings=True
