added in new Grabber class

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -130,7 +130,7 @@ CurrentPosGridSize=1
 LastLevel=/Game/Levels/Building_Escape
 
 [ModuleFileTracking]
-Building_Escape.TimeStamp=2021.06.15-15.53.27
+Building_Escape.TimeStamp=2021.06.15-16.16.35
 Building_Escape.LastCompileMethod=Runtime
 PakFile.TimeStamp=2021.04.03-18.31.01
 PakFile.LastCompileMethod=Unknown
@@ -1528,6 +1528,53 @@ TriggerVolume.Replication=True
 TriggerVolume.BrushSettings=True
 TriggerVolume.Actor=True
 OpenDoor.OpenDoor=True
+DefaultPawn.TransformCommon=True
+DefaultPawn.StaticMesh=True
+DefaultPawn.Materials=True
+DefaultPawn.Pawn=True
+DefaultPawn.FloatingPawnMovement=True
+DefaultPawn.NavMovement=True
+DefaultPawn.Velocity=True
+DefaultPawn.Physics=True
+DefaultPawn.PlanarMovement=True
+DefaultPawn.Collision=True
+DefaultPawn.Lighting=True
+DefaultPawn.MovementComponent=True
+DefaultPawn.Tags=True
+DefaultPawn.Rendering=True
+DefaultPawn.Activation=True
+DefaultPawn.Cooking=True
+DefaultPawn.Shape=True
+DefaultPawn.Navigation=True
+DefaultPawn.VirtualTexture=True
+DefaultPawn.Camera=True
+DefaultPawn.Replication=True
+DefaultPawn.Input=True
+DefaultPawn.Actor=True
+DefaultPawn_BP_C.TransformCommon=True
+DefaultPawn_BP_C.StaticMesh=True
+DefaultPawn_BP_C.Materials=True
+DefaultPawn_BP_C.Pawn=True
+DefaultPawn_BP_C.FloatingPawnMovement=True
+DefaultPawn_BP_C.NavMovement=True
+DefaultPawn_BP_C.Velocity=True
+DefaultPawn_BP_C.Physics=True
+DefaultPawn_BP_C.PlanarMovement=True
+DefaultPawn_BP_C.Collision=True
+DefaultPawn_BP_C.Lighting=True
+DefaultPawn_BP_C.MovementComponent=True
+DefaultPawn_BP_C.Tags=True
+DefaultPawn_BP_C.Rendering=True
+DefaultPawn_BP_C.Activation=True
+DefaultPawn_BP_C.Cooking=True
+DefaultPawn_BP_C.Shape=True
+DefaultPawn_BP_C.Navigation=True
+DefaultPawn_BP_C.VirtualTexture=True
+DefaultPawn_BP_C.Camera=True
+DefaultPawn_BP_C.Replication=True
+DefaultPawn_BP_C.Input=True
+DefaultPawn_BP_C.Actor=True
+DefaultPawn_BP_C.Tick=True
 
 [DetailMultiObjectNodeExpansion]
 EditorStyleSettings=True
@@ -1751,19 +1798,20 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Models/DoorFrame
-MRUItem1=/Game/Models/MetalFloor_Mat
-MRUItem2=/Game/Models/Broken_Concrete
-MRUItem3=/Game/Models/NewInstance
-MRUItem4=/Game/Models/Brick
-MRUItem5=/Game/Models/Floor
-MRUItem6=/Game/Models/StoneWall
-MRUItem7=/Game/Models/Wall
-MRUItem8=/Game/Models/Roof
-MRUItem9=/Engine/Tutorial/SubEditors/TutorialAssets/TutorialMaterial
-MRUItem10=/Game/Models/MetalFloor
-MRUItem11=/Game/Models/Wood
-MRUItem12=/Game/Levels/Building_Escape
+MRUItem0=/Game/Models/DefaultPawn_BP
+MRUItem1=/Game/Models/DoorFrame
+MRUItem2=/Game/Models/MetalFloor_Mat
+MRUItem3=/Game/Models/Broken_Concrete
+MRUItem4=/Game/Models/NewInstance
+MRUItem5=/Game/Models/Brick
+MRUItem6=/Game/Models/Floor
+MRUItem7=/Game/Models/StoneWall
+MRUItem8=/Game/Models/Wall
+MRUItem9=/Game/Models/Roof
+MRUItem10=/Engine/Tutorial/SubEditors/TutorialAssets/TutorialMaterial
+MRUItem11=/Game/Models/MetalFloor
+MRUItem12=/Game/Models/Wood
+MRUItem13=/Game/Levels/Building_Escape
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 bSCCUseGlobalSettings=False
@@ -1793,6 +1841,7 @@ bUseUnsortedMenus=False
 /Game/Models/Roof.Roof=1
 /Game/Models/Brick.Brick=1
 /Game/Models/NewInstance.NewInstance=0
+/Game/Models/DefaultPawn_BP.DefaultPawn_BP=0
 
 [MaterialEditor]
 PrimType=1
@@ -1864,4 +1913,40 @@ MaterialInstanceConstant=
 bShowGrid=False
 bDrawGrid=False
 PrimType=1
+
+[/Script/BlueprintGraph.BlueprintEditorSettings]
+bDrawMidpointArrowsInBlueprints=False
+bShowGraphInstructionText=True
+bHideUnrelatedNodes=False
+bShowShortTooltips=True
+bSplitContextTargetSettings=True
+bExposeAllMemberComponentFunctions=True
+bShowContextualFavorites=False
+bExposeDeprecatedFunctions=False
+bCompactCallOnMemberNodes=False
+bFlattenFavoritesMenus=True
+bFavorPureCastNodes=False
+bAutoCastObjectConnections=False
+bShowViewportOnSimulate=False
+bShowInheritedVariables=False
+bAlwaysShowInterfacesInOverrides=True
+bShowParentClassInOverrides=True
+bShowEmptySections=True
+bShowAccessSpecifier=False
+bSpawnDefaultBlueprintNodes=True
+bHideConstructionScriptComponentsInDetailsView=True
+bHostFindInBlueprintsInGlobalTab=True
+bNavigateToNativeFunctionsFromCallNodes=True
+Bookmarks=()
+bIncludeCommentNodesInBookmarksTab=True
+bShowBookmarksForCurrentDocumentOnlyInTab=False
+GraphEditorQuickJumps=()
+SaveOnCompile=SoC_Never
+bJumpToNodeErrors=False
+bAllowExplicitImpureNodeDisabling=False
+bShowActionMenuItemSignatures=False
+bBlueprintNodeUniqueNames=False
+bShowDetailedCompileResults=False
+CompileEventDisplayThresholdMs=5
+NodeTemplateCacheCapMB=20.000000
 
