--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/Template_Default.Template_Default
+GameDefaultMap=/Game/Levels/Building_Escape.Building_Escape
 EditorStartupMap=/Game/Levels/Building_Escape.Building_Escape
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
