added the grabber component to the default pawn BP

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -130,7 +130,7 @@ CurrentPosGridSize=1
 LastLevel=/Game/Levels/Building_Escape
 
 [ModuleFileTracking]
-Building_Escape.TimeStamp=2021.06.15-16.16.35
+Building_Escape.TimeStamp=2021.06.15-16.28.26
 Building_Escape.LastCompileMethod=Runtime
 PakFile.TimeStamp=2021.04.03-18.31.01
 PakFile.LastCompileMethod=Unknown
@@ -957,6 +957,7 @@ ExternalImagePicker.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/Models/DefaultPawn_BP.DefaultPawn_BP
 
 [DetailCategories]
 EditorStyleSettings.UserInterface=True
@@ -1575,6 +1576,22 @@ DefaultPawn_BP_C.Replication=True
 DefaultPawn_BP_C.Input=True
 DefaultPawn_BP_C.Actor=True
 DefaultPawn_BP_C.Tick=True
+DefaultPawn_BP_C.ComponentTick=True
+DefaultPawn_BP_C.ComponentReplication=True
+DefaultPawn_BP_C.Variable=True
+StaticMeshComponent.Variable=True
+StaticMeshComponent.Sockets=True
+StaticMeshComponent.ComponentTick=True
+StaticMeshComponent.ComponentReplication=True
+StaticMeshComponent.Events=True
+Grabber.Variable=True
+Grabber.Sockets=True
+Grabber.Tags=True
+Grabber.ComponentTick=True
+Grabber.ComponentReplication=True
+Grabber.Activation=True
+Grabber.Cooking=True
+Grabber.Events=True
 
 [DetailMultiObjectNodeExpansion]
 EditorStyleSettings=True
