created a GameModeBP and changed the default pawn to the DefaultPawnBP

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Levels/Building_Escape.Building_Escape
 EditorStartupMap=/Game/Levels/Building_Escape.Building_Escape
+GlobalDefaultGameMode=/Game/MyBuilding_EscapeGameModeBase_BP.MyBuilding_EscapeGameModeBase_BP_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
