--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -130,7 +130,7 @@ CurrentPosGridSize=1
 LastLevel=/Game/Levels/Building_Escape
 
 [ModuleFileTracking]
-Building_Escape.TimeStamp=2021.06.15-16.28.26
+Building_Escape.TimeStamp=2021.06.15-16.45.36
 Building_Escape.LastCompileMethod=Runtime
 PakFile.TimeStamp=2021.04.03-18.31.01
 PakFile.LastCompileMethod=Unknown
@@ -1592,6 +1592,10 @@ Grabber.ComponentReplication=True
 Grabber.Activation=True
 Grabber.Cooking=True
 Grabber.Events=True
+MyBuilding_EscapeGameModeBase_BP_C.Tick=True
+MyBuilding_EscapeGameModeBase_BP_C.Classes=True
+MyBuilding_EscapeGameModeBase_BP_C.Game=True
+MyBuilding_EscapeGameModeBase_BP_C.GameMode=True
 
 [DetailMultiObjectNodeExpansion]
 EditorStyleSettings=True
@@ -1664,6 +1668,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [PlacementMode]
+RecentlyPlaced=/Game/Models/DefaultPawn_BP.DefaultPawn_BP;
 RecentlyPlaced=/Game/Models/Metal_Floor_Mat.Metal_Floor_Mat;
 RecentlyPlaced=/Script/Engine.TriggerVolume;/Engine/Transient.ActorFactoryBoxVolume_20
 RecentlyPlaced=/Game/Models/Roof.Roof;
@@ -1815,20 +1820,21 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Models/DefaultPawn_BP
-MRUItem1=/Game/Models/DoorFrame
-MRUItem2=/Game/Models/MetalFloor_Mat
-MRUItem3=/Game/Models/Broken_Concrete
-MRUItem4=/Game/Models/NewInstance
-MRUItem5=/Game/Models/Brick
-MRUItem6=/Game/Models/Floor
-MRUItem7=/Game/Models/StoneWall
-MRUItem8=/Game/Models/Wall
-MRUItem9=/Game/Models/Roof
-MRUItem10=/Engine/Tutorial/SubEditors/TutorialAssets/TutorialMaterial
-MRUItem11=/Game/Models/MetalFloor
-MRUItem12=/Game/Models/Wood
-MRUItem13=/Game/Levels/Building_Escape
+MRUItem0=/Game/MyBuilding_EscapeGameModeBase_BP
+MRUItem1=/Game/Models/DefaultPawn_BP
+MRUItem2=/Game/Models/DoorFrame
+MRUItem3=/Game/Models/MetalFloor_Mat
+MRUItem4=/Game/Models/Broken_Concrete
+MRUItem5=/Game/Models/NewInstance
+MRUItem6=/Game/Models/Brick
+MRUItem7=/Game/Models/Floor
+MRUItem8=/Game/Models/StoneWall
+MRUItem9=/Game/Models/Wall
+MRUItem10=/Game/Models/Roof
+MRUItem11=/Engine/Tutorial/SubEditors/TutorialAssets/TutorialMaterial
+MRUItem12=/Game/Models/MetalFloor
+MRUItem13=/Game/Models/Wood
+MRUItem14=/Game/Levels/Building_Escape
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 bSCCUseGlobalSettings=False
