added in a object that will become new trigger item for pressure plate

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -130,7 +130,7 @@ CurrentPosGridSize=1
 LastLevel=/Game/Levels/Building_Escape
 
 [ModuleFileTracking]
-Building_Escape.TimeStamp=2021.06.15-19.45.22
+Building_Escape.TimeStamp=2021.06.15-20.11.35
 Building_Escape.LastCompileMethod=Runtime
 PakFile.TimeStamp=2021.04.03-18.31.01
 PakFile.LastCompileMethod=Unknown
@@ -957,7 +957,6 @@ ExternalImagePicker.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/Models/DefaultPawn_BP.DefaultPawn_BP
 
 [DetailCategories]
 EditorStyleSettings.UserInterface=True
@@ -1668,6 +1667,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [PlacementMode]
+RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Models/DefaultPawn_BP.DefaultPawn_BP;
 RecentlyPlaced=/Game/Models/Metal_Floor_Mat.Metal_Floor_Mat;
 RecentlyPlaced=/Script/Engine.TriggerVolume;/Engine/Transient.ActorFactoryBoxVolume_20
