--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -130,7 +130,7 @@ CurrentPosGridSize=1
 LastLevel=/Game/Levels/Building_Escape
 
 [ModuleFileTracking]
-Building_Escape.TimeStamp=2021.06.15-20.12.51
+Building_Escape.TimeStamp=2021.06.16-00.47.49
 Building_Escape.LastCompileMethod=Runtime
 PakFile.TimeStamp=2021.04.03-18.31.01
 PakFile.LastCompileMethod=Unknown
@@ -1931,6 +1931,75 @@ PreviewMaterial.Translucency=True
 [DetailCustomWidgetExpansion]
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,
 MaterialInstanceConstant=
+CryptoKeysSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+GeneralProjectSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+GameplayTagsSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+GameMapsSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+MoviePlayerSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+ProjectPackagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+HardwareTargetingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+AssetManagerSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+AssetToolsSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+AISystem=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+AnimationSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+AudioSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+ChaosSolverSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+CollisionProfile=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+ConsoleSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+CookerSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+CrowdManager=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+DebugCameraControllerSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+GameplayDebuggerConfig=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+GarbageCollectionSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+Engine=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+HierarchicalLODSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+InputSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+LandscapeSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+RecastNavMesh=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+NavigationSystemV1=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+NetworkSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+PhysicsSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+RendererSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+RendererOverrideSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+SlateSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+StreamingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+TutorialSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+UserInterfaceSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+LevelEditor2DSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+EditorProjectAppearanceSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+BlueprintEditorProjectSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+ClassViewerProjectSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+ProxyLODMeshSimplificationSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+MovieSceneToolsProjectSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+MeshSimplificationSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+PaperImporterSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+SkeletalMeshSimplificationSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+StructViewerProjectSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+TextureImportSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+UMGEditorProjectSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+AndroidRuntimeSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+ShaderPlatformQualitySettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+AndroidSDKSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+IOSRuntimeSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+LinuxTargetSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+MacTargetSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+LuminRuntimeSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+MagicLeapSDKSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+WindowsTargetSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+AvfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+GooglePADRuntimeSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+ImgMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+LevelSequenceEditorSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+MagicLeapSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+MagicLeapARPinSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+NiagaraSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+NiagaraEditorSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+PaperRuntimeSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+SteamVREditorSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+TcpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+TemplateSequenceEditorSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+UdpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
 
 [MaterialInstanceEditor]
 bShowGrid=False
